--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -38,6 +38,7 @@
                     <input type="email" 
                            name="login" 
                            id="id_login"
+                           value="{{ form.login.value|default:'' }}"
                            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
                            placeholder="Enter your email address" 
                            required>
@@ -89,7 +90,9 @@
                 {% endif %}
 
                 <!-- Hidden redirect field -->
-                {{ redirect_field }}
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
 
                 <!-- Submit Button -->
                 <button type="submit"
