--- a/templates/planner/childEntries.html
+++ b/templates/planner/childEntries.html
@@ -112,9 +112,12 @@
                                         <a href="{% url 'edit_entry' entry.id %}" class="text-blue-600 hover:text-blue-800 font-medium">
                                             Edit
                                         </a>
-                                        <a href="{% url 'delete_entry' entry.id %}" onclick="return confirm('Are you sure you want to delete this entry?')" class="text-red-600 hover:text-red-800 font-medium">
-                                            Delete
-                                        </a>
+                                        <form method="post" action="{% url 'delete_entry' entry.id %}" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this entry?')">
+                                            {% csrf_token %}
+                                            <button type="submit" class="text-red-600 hover:text-red-800 font-medium bg-transparent border-none cursor-pointer">
+                                                Delete
+                                            </button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
